Fixed generic message layout issue.

--- a/src/index.css
+++ b/src/index.css
@@ -40,17 +40,17 @@ button.customButtons {
     /****** Generic Message Component ******/
     img#logo-msg {
         position: absolute;
-        left: 44rem;
-        top: 6rem;
-        height: 30rem;
+        left: 28rem;
+        top: 3rem;
+        height: 25rem;
         width: 40rem;
     }
 
     #generic-message div#wrapper {
         margin: 0 15rem;
         position: relative;
-        top: 17rem;
-        left: 24rem;
+        top: 10rem;
+        left: 8rem;
         width: 50rem;
     }
     
